--- a/Inferential_statistics.ipynb
+++ b/Inferential_statistics.ipynb
@@ -48,8 +48,11 @@
     "# Questions Posed\n",
     "\n",
     "- Is the longer length of bad reviews significant?\n",
-    "- Is the longer length of closed reviews significant?\n",
-    "- Do open restaurants have better reviews?"
+    "- Is the rating of open restaurants' reviews generally higher than the closed restaurants?\n",
+    "\n",
+    "Possible additions\n",
+    "\n",
+    "- Is the longer length of closed reviews significant?"
    ]
   },
   {
